--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<h1>Hello COURSERA!</h1>
+	<h1>Hello COURSERA! It,s a great course!</h1>
 
 </body>
 </html>
